stuff. try and fix image spacing issues.

--- a/assets/css/admin/funnel-editor.css
+++ b/assets/css/admin/funnel-editor.css
@@ -47,7 +47,7 @@
 }
 
 .funnel-editor-header{
-    z-index: 9999;
+    z-index: 999;
     top: 32px;
     box-sizing: border-box;
     position: fixed;
